# StockSense

./: .gitignore  Dockerfile  README.md  dev_requirements.txt  main.py  pyproject.toml  requireements.txt  requirements.txt  setup.py  start.sh
.devcontainer/: devcontainer.json
stocksense/: main.py
stocksense/app/: Home.py  __init__.py
stocksense/res/html/: alphabet_model.html  apple_model.html
stocksense/src/backend/: __init__.py
stocksense/src/model/: __init__.py  autoregressor.py
stocksense/src/util/data/: __init__.py
