[tool.poetry]
name = "stocksense"
version = "0.1.0"
description = "Simple Stock Analytics"
authors = ["zibestr <https://github.com/zibestr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
yfinance = "^0.2.38"
statsmodels = "^0.14.2"
streamlit = "^1.34.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
catboost = "^1.2.5"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"


[[tool.poetry.source]]
name = "repository"
url = "https://github.com/zibestr/StockSense"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
